--- a/public/main.css
+++ b/public/main.css
@@ -18,7 +18,8 @@ main {
   border-top: solid #ccf7f9 2px;
   border-right: solid #ccf7f9 2px;
   margin: 10vh 25vw;
-  padding: 2vh; }
+  padding: 2vh;
+  overflow-y: auto; }
   main header {
     font-size: large;
     text-decoration: underline;
@@ -42,6 +43,16 @@ main {
       main form label input {
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         background-color: #e7ad61; }
+  main #vars {
+    display: flex;
+    flex-direction: row;
+    border: #021112 solid 2px;
+    justify-content: center; }
+    main #vars .var {
+      width: 100%;
+      background-color: aquamarine;
+      text-align: center;
+      border: 1px solid #021112; }
   main output {
     display: flex;
     flex-direction: column; }
@@ -69,10 +80,20 @@ main {
         height: auto;
         padding: 1vw 1vh;
         box-sizing: border-box;
-        background-color: rgba(135, 237, 242, 0.8); }
+        background-color: rgba(135, 237, 242, 0.8);
+        animation: heapBlockAnim 500ms forwards; }
+
+@keyframes heapBlockAnim {
+  0% {
+    margin-left: -2vw; } }
   main #errorMsg {
+    text-align: left;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100%;
-    height: 20vh;
-    padding-right: 2bw;
-    color: red;
-    background-image: linear-gradient(0deg, gray, #7a4242); }
+    margin: 5vh 0;
+    height: 100%;
+    padding-left: 0.5vw;
+    bottom: 12vh;
+    color: #990000;
+    border: solid 3px black;
+    background-image: linear-gradient(0deg, rgba(91, 91, 94, 0.479), rgba(104, 104, 117, 0.795)); }
