--- a/public/main.scss
+++ b/public/main.scss
@@ -32,6 +32,7 @@ main
     @include darkSideBorder($main-back-color);
     margin: 10vh 25vw;
     padding: 2vh;
+    overflow-y: auto;
 
     header
     {
@@ -62,6 +63,22 @@ main
                 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
                 background-color:rgb(231, 173, 97);
             }
+        }
+    }
+
+    #vars
+    {
+        display: flex;
+        flex-direction: row;
+        border: darken($main-back-color, 80%) solid 2px;
+        justify-content: center;
+
+        .var
+        {
+            width: 100%;
+            background-color: aquamarine;
+            text-align: center;
+            border: 1px solid darken($main-back-color, 80%);
         }
     }
 
@@ -99,6 +116,14 @@ main
                 padding: 1vw 1vh;
                 box-sizing: border-box;
                 background-color: transparentize(darken($main-back-color, 10%), 0.2);
+                animation: heapBlockAnim 500ms forwards;
+                @keyframes heapBlockAnim {
+                    0%
+                    {
+                        margin-left: -2vw;
+                    }
+                    
+                }
 
             }
         }
@@ -106,10 +131,15 @@ main
 
     #errorMsg
     {
+        text-align: left;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         width: 100%;
-        height: 20vh;
-        padding-right: 2bw;
-        color: red;
-        background-image: linear-gradient(0deg, gray, rgb(122, 66, 66));
+        margin: 5vh 0;
+        height: 100%;
+        padding-left: 0.5vw;
+        bottom: 12vh;
+        color: rgb(153, 0, 0);
+        border: solid 3px black;
+        background-image: linear-gradient(0deg, rgba(91, 91, 94, 0.479), rgba(104, 104, 117, 0.795));
     }
 }
