--- a/public/main.scss
+++ b/public/main.scss
@@ -141,5 +141,6 @@ main
         color: rgb(153, 0, 0);
         border: solid 3px black;
         background-image: linear-gradient(0deg, rgba(91, 91, 94, 0.479), rgba(104, 104, 117, 0.795));
+        overflow-y: auto;
     }
 }
