--- a/public/main.scss
+++ b/public/main.scss
@@ -135,12 +135,11 @@ main
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         width: 100%;
         margin: 5vh 0;
-        height: 100%;
-        padding-left: 0.5vw;
+        height: auto;
+        padding: 0.5vh 0 0.5vh 0.5vw;
         bottom: 12vh;
         color: rgb(153, 0, 0);
         border: solid 3px black;
         background-image: linear-gradient(0deg, rgba(91, 91, 94, 0.479), rgba(104, 104, 117, 0.795));
-        overflow-y: auto;
     }
 }
